@@ -8,6 +8,7 @@ Author URI: http://edwardcaissie.com/
 WordPress Required Version: 3.4
 WordPress Tested Version: 3.9
 Tags: brown, orange, silver, tan, light, two-columns, right-sidebar, fixed-width, threaded-comments, sticky-post, custom-menu, custom-background
+Textdomain: desk-mess-mirrored
 License: GNU General Public License v2
 License URI: http://www.gnu.org/licenses/old-licenses/gpl-2.0.html
 */
